--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,9 +62,61 @@ a {
     line-height: 80px;
     color: white;
     font-size: 30px;
-    font-family: "Î¢ÈíÑÅºÚ";
+    font-family: "Î¢å¾®è½¯é›…é»‘";
 }
 
 #content {
     height: 800px;
+}
+
+#user_left {
+    background-color: white;
+    border-radius:5px 0 0 5px;
+}
+
+.user_left_content {
+    padding: 10px 0px 0px 0px;
+    margin-top: 30px;
+    max-height: 200px;
+    overflow: hidden
+}
+
+#user_right{
+    background-color: #73CFF1;
+    border-radius:0 5px 5px 0;
+    padding: 0px;
+}
+.user_head_portrait img{
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    border-radius: 10px;
+}
+.user_message{
+  background-color:   #89B4CA;
+    height: 50px;
+}
+.user_message li{
+    display: inline-block;
+    width: 32%;
+    height: 50px;
+
+
+}
+.user_message a{
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    margin: 8px 0;
+    border-left: solid 1px rgba(0,0,0,0.2);
+}
+.user_message  li:first-child a{
+    border-left: none;
+}
+.user_message li a span{
+    color: #006a92;
+    padding: 0 0;
+    display: block;
+
+
 }
