--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
+    <script src="/js/dropzone.js"></script>
 </head>
 <body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
 <% include top %>
+
 <div class="container">
     <% include prompt.ejs%>
         <div class="row">
@@ -31,7 +33,11 @@
           </div>
          <div class="panel-body"><%- post.post %></div>
             <div class="panel-footer clearfix">
-
+                 <% if(post.img) {%>
+                <%  post.img.forEach(function (img) { %>
+                <a target="_blank" href="<%=img%>"><img style="width: 50px;height: 50px" src="<%=img%>"></a>
+                <%   })%>
+                <%}%>
                 <form action="/remove" target="_blank" method="post">
                     <div class="btn-group pull-right ">
                         <% if (user && (user.name == post.name)) { %>
@@ -66,7 +72,6 @@
         </div>
         <% }) %>
         </div>
-
     <% include pageing %>
     <% include bottom %>
     </div>
