--- a/views/top.ejs
+++ b/views/top.ejs
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-default nav-justified " role="navigation" style="padding: 0px 100px;border-radius: 0px">
     <div style="width: 100px" class="pull-left"><img class="img-rounded img-responsive" src="/images/icon.png"></div>
     <form class="navbar-form pull-left" role="search" action="/search" method="GET">
@@ -42,6 +40,7 @@
         </script>
     </ul>
 </nav>
+
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -52,21 +51,37 @@
                     &times;
                 </button>
                 <h4 class="modal-title" id="myModalLabel">
-                   发表
+                    发表
                 </h4>
             </div>
             <form action="/post" class="login_form" method="post">
-            <div class="modal-body">
+                <div class="modal-body">
                     <div>标题：<input id="title" type="text" name="title"></div>
-                <div><input id="title" type="file" name="title"></div>
-                <div>内容：<textarea style="width:560px;height:100px;resize: none" type="content" id="content"
-                                  name="content"></textarea></div>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-primary">提交</button>
-                <button type="reset" class="btn btn-primary">重置</button>
-            </div>
+
+                    <div>内容：<textarea style="width:560px;height:100px;resize: none" type="content" id="content"
+                                      name="content"></textarea></div>
+
+                </div>
+
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">提交</button>
+                    <button type="reset" class="btn btn-primary">重置</button>
+                </div>
             </form>
+            <div id="uploadImg">xixi</div>
+            <script>
+                $("#uploadImg").dropzone({
+                    url: "/post/img",
+                    method: "post",
+                    addRemoveLinks: true,
+                    acceptedFiles: 'image/*',
+                    init: function () {
+                        this.on('success', function (file, info) {
+                            $(".login_form").append("<input name=img type='text' value="+info.url+">");
+                        });
+                    }
+                });
+            </script>
         </div>
     </div>
 </div>
